variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbPas
nbPas=0
^Variables:4: error: not found: value nbPas
  nbPas=nbPas+1
  ^Variables:6: error: not found: value prendBisuit
prendBisuit()
^Variables:7: error: not found: value dejafait
dejafait==nbPas
^Variables:7: error: not found: value nbPas
dejafait==nbPas
          ^Variables:8: error: not found: value dejafait
while (dejafait != nbPas){
       ^Variables:8: error: not found: value nbPas
while (dejafait != nbPas){
                   ^Variables:11: error: not found: value poseBisuit
poseBisuit()
^