variables.Variables.scala.code
nbPas=0
while (estSurBiscuit==false){
  avance()
  nbPas=nbPas+1
}
prendBisuit()
dejafait==nbPas
while (dejafait != nbPas){
  recule()
}
poseBisuit()
